[015] first tests of codegen-based fusion